clase 4 - endpoinst y query parameters

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <h1>gatitos aleatorios</h1>
 
-    <img alt="foto gatito aleatorio">
-    <button type="button" onclick="cambiarImagen()"></button>
+    <img id="img1" width="150" alt="Foto gatito aleatorio">
+    <img id="img2" width="150" alt="Foto gatito aleatorio">
+    <img id="img3" width="150" alt="Foto gatito aleatorio">
+    <button type="button" onclick="cambiarImagen()">Recargar</button>
 
     <script src ="./main.js"></script>
 </body>
