clase 7 - maquetacion del proyecto

--- a/index.html
+++ b/index.html
@@ -7,12 +7,33 @@
     <title>gatitos aleatorios</title>
 </head>
 <body>
-    <h1>gatitos aleatorios</h1>
+    <h1>michis app</h1>
 
-    <img id="img1" width="150" alt="Foto gatito aleatorio">
-    <img id="img2" width="150" alt="Foto gatito aleatorio">
-    <img id="img3" width="150" alt="Foto gatito aleatorio">
-    <button type="button" onclick="cambiarImagen()">Recargar</button>
+    <section id= "randomMichis">
+        <h2>michis aleatorios</h2>
+        <article>
+            <img id="img1" width="150" alt="Foto gatito aleatorio">
+            <button onclick="cambiarImagen()">guardar michi en favoritos</button>
+        </article>
+
+        <article>
+            <img id="img2" width="150" alt="Foto gatito aleatorio">
+            <button onclick="cambiarImagen()">guardar michi en favoritos</button>
+        </article>
+
+        <article>
+            <img id="img3" width="150" alt="Foto gatito aleatorio">
+            <button  onclick="cambiarImagen()">guardar michi en favoritos</button>
+        </article>
+    </section>
+
+    <section id = "favoritesMichis">
+        <h2>michis favoritos</h2>
+        <article>
+            <img id="img1" width="150" alt="Foto gatito aleatorio">
+            <button onclick="cambiarImagen()">sacar al michi en favoritos</button>
+        </article>
+    </section>
 
     <script src ="./main.js"></script>
 </body>
