clase 9 - GET: leyendo michis favoritos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <section id= "randomMichis">
         <h2>michis aleatorios</h2>
+        <span id="error"></span>
         <article>
             <img id="img1" width="150" alt="Foto gatito aleatorio">
             <button onclick="cambiarImagen()">guardar michi en favoritos</button>
@@ -19,11 +20,6 @@
         <article>
             <img id="img2" width="150" alt="Foto gatito aleatorio">
             <button onclick="cambiarImagen()">guardar michi en favoritos</button>
-        </article>
-
-        <article>
-            <img id="img3" width="150" alt="Foto gatito aleatorio">
-            <button  onclick="cambiarImagen()">guardar michi en favoritos</button>
         </article>
     </section>
 
