clase 10 - POST guardando michis favoritos

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <span id="error"></span>
         <article>
             <img id="img1" width="150" alt="Foto gatito aleatorio">
-            <button onclick="cambiarImagen()">guardar michi en favoritos</button>
+            <button id = "btn1" onclick="saveFavouriteMichis()">guardar michi en favoritos</button>
         </article>
 
         <article>
             <img id="img2" width="150" alt="Foto gatito aleatorio">
-            <button onclick="cambiarImagen()">guardar michi en favoritos</button>
+            <button id = "btn2" onclick="saveFavouriteMichis()">guardar michi en favoritos</button>
         </article>
     </section>
 
