clase 11 - consultas a la API para escribir HTML dinamico

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <span id="error"></span>
         <article>
             <img id="img1" width="150" alt="Foto gatito aleatorio">
-            <button id = "btn1" onclick="saveFavouriteMichis()">guardar michi en favoritos</button>
+            <button id = "btn1">guardar michi en favoritos</button>
         </article>
 
         <article>
             <img id="img2" width="150" alt="Foto gatito aleatorio">
-            <button id = "btn2" onclick="saveFavouriteMichis()">guardar michi en favoritos</button>
+            <button id = "btn2">guardar michi en favoritos</button>
         </article>
     </section>
 
-    <section id = "favoritesMichis">
+    <section id = "favoriteMichis">
         <h2>michis favoritos</h2>
         <article>
             <img id="img1" width="150" alt="Foto gatito aleatorio">
