clase 12 - delete: borrando michis favoritos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>michis favoritos</h2>
         <article>
             <img id="img1" width="150" alt="Foto gatito aleatorio">
-            <button onclick="cambiarImagen()">sacar al michi en favoritos</button>
+            <button>sacar al michi en favoritos</button>
         </article>
     </section>
 
