clase 16 - formData: publicando imagenes de michis

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
         </article>
     </section>
 
+    <section id="uploadingMichi">
+        <h2>Sube la foto de tu michi</h2>
+    
+        <form id="uploadingForm">
+          <input id="file" type="file" name="file" />
+          <button type="button" onclick="uploadMichiPhoto()">Subit foto de michi</button>
+        </form>
+    </section>
+
     <section id = "favoriteMichis">
         <h2>michis favoritos</h2>
         <article>
