--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </article>
     </section>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src ="./main.js"></script>
 </body>
 </html>
